@@ -1,3 +1,9 @@
+2009-06-18  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* elf32-i386.c (elf_i386_check_relocs): Remove isymbuf and use
+	bfd_sym_from_r_symndx.
+	* elf64-x86-64.c (elf64_x86_64_check_relocs): Likewise.
+
 2009-06-18  Alan Modra  <amodra@bigpond.net.au>
 
 	* elf-bfd.h (struct sym_sec_cache): Delete.
